#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
resolver = "2"
members = [
  "commons/zenoh-buffers",
  "commons/zenoh-codec",
  "commons/zenoh-collections",
  "commons/zenoh-config",
  "commons/zenoh-core",
  "commons/zenoh-crypto",
  "commons/zenoh-keyexpr",
  "commons/zenoh-macros",
  "commons/zenoh-protocol",
  "commons/zenoh-result",
  "commons/zenoh-shm",
  "commons/zenoh-sync",
  "commons/zenoh-task",
  "commons/zenoh-util",
  "commons/zenoh-runtime",
  "examples",
  "io/zenoh-link",
  "io/zenoh-link-commons",
  "io/zenoh-links/zenoh-link-quic/",
  "io/zenoh-links/zenoh-link-serial",
  "io/zenoh-links/zenoh-link-tcp/",
  "io/zenoh-links/zenoh-link-tls/",
  "io/zenoh-links/zenoh-link-udp/",
  "io/zenoh-links/zenoh-link-unixsock_stream/",
  "io/zenoh-links/zenoh-link-ws/",
  "io/zenoh-links/zenoh-link-unixpipe/",
  "io/zenoh-links/zenoh-link-vsock/",
  "io/zenoh-transport",
  "plugins/zenoh-backend-example",
  "plugins/zenoh-plugin-example",
  "plugins/zenoh-backend-traits",
  "plugins/zenoh-plugin-rest",
  "plugins/zenoh-plugin-storage-manager",
  "plugins/zenoh-plugin-trait",
  "zenoh",
  "zenoh-ext",
  "zenoh-ext/examples",
  "zenohd",
]
exclude = ["ci/nostd-check", "ci/valgrind-check"]

[workspace.package]
rust-version = "1.75.0"
version = "1.0.0-beta.4"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = [
  "kydos <angelo@icorsaro.net>",
  "Julien Enoch <julien@enoch.fr>",
  "Olivier Hécart <olivier.hecart@zettascale.tech>",
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Pierre Avital <pierre.avital@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."

# DEFAULT-FEATURES NOTE: Be careful with default-features and additivity!
#                        (https://github.com/rust-lang/cargo/issues/11329)
[workspace.dependencies]
advisory-lock = "0.3.0"
aes = "0.8.4"
ahash = "0.8.11"
anyhow = { version = "1.0.89", default-features = false } # Default features are disabled due to usage in no_std crates
async-executor = "1.13.1"
async-global-executor = "2.4.1"
async-io = "2.3.4"
async-std = { version = "1.6.5", features = ["tokio1"] }
async-trait = "0.1.82"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.7.1"
clap = { version = "4.5.17", features = ["derive"] }
console-subscriber = "0.4.0"
const_format = "0.2.33"
crc = "3.2.1"
criterion = "0.5"
crossbeam-utils = "0.8.20"
derive_more = { version = "1.0.0", features = ["as_ref"] }
derive-new = "0.7.0"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-loki = "0.2"
event-listener = "5.3.1"
flume = "0.11"
form_urlencoded = "1.2.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false } # Default features are disabled due to some crates' requirements
git-version = "0.3.9"
hashbrown = "0.14"
hex = { version = "0.4.3", default-features = false } # Default features are disabled due to usage in no_std crates
hmac = { version = "0.12.1", features = ["std"] }
home = "0.5.9"
http-types = "2.12.0"
humantime = "2.1.0"
itertools = "0.13.0"
json5 = "0.4.1"
jsonschema = { version = "0.20", default-features = false }
keyed-set = "1.0.0"
lazy_static = "1.5.0"
leb128 = "0.2"
libc = "0.2.158"
libloading = "0.8"
tracing = "0.1"
lockfree = "0.5"
lz4_flex = "0.11"
nix = { version = "0.29.0", features = ["fs"] }
num_cpus = "1.16.0"
num-traits = { version = "0.2.19", default-features = false }
once_cell = "1.19.0"
ordered-float = "4.2.2"
panic-message = "0.3.0"
paste = "1.0.15"
petgraph = "0.6.5"
phf = { version = "0.11.2", features = ["macros"] }
pnet = "0.35.0"
pnet_datalink = "0.35.0"
proc-macro2 = "1.0.86"
quinn = "0.11.5"
quote = "1.0.37"
rand = { version = "0.8.5", default-features = false } # Default features are disabled due to usage in no_std crates
rand_chacha = "0.3.1"
rcgen = "0.13.1"
regex = "1.10.6"
ron = "0.8.1"
ringbuffer-spsc = "0.1.9"
rsa = "0.9"
rustc_version = "0.4.1"
rustls = { version = "0.23.13", default-features = false, features = [
  "logging",
  "tls12",
  "ring",
] }
rustls-native-certs = "0.8.0"
rustls-pemfile = "2.1.3"
rustls-webpki = "0.102.8"
rustls-pki-types = "1.8.0"
schemars = { version = "0.8.21", features = ["either"] }
secrecy = { version = "0.8.0", features = ["serde", "alloc"] }
serde = { version = "1.0.210", default-features = false, features = [
  "derive",
] } # Default features are disabled due to usage in no_std crates
serde_cbor = "0.11.2"
serde_json = "1.0.128"
serde-pickle = "1.1.1"
serde_yaml = "0.9.34"
static_init = "1.0.3"
stabby = "36.1.1"
sha3 = "0.10.8"
shared_memory = "0.12.4"
shellexpand = "3.1.0"
socket2 = { version = "0.5.7", features = ["all"] }
stop-token = "0.7.0"
syn = "2.0"
tide = "0.16.0"
token-cell = { version = "1.5.0", default-features = false }
tokio = { version = "1.40.0", default-features = false } # Default features are disabled due to some crates' requirements
tokio-util = "0.7.12"
tokio-tungstenite = "0.24.0"
tokio-rustls = { version = "0.26.0", default-features = false }
# tokio-vsock = see: io/zenoh-links/zenoh-link-vsock/Cargo.toml (workspaces does not support platform dependent dependencies)
thread-priority = "1.1.0"
typenum = "1.17.0"
uhlc = { version = "0.8.0", default-features = false } # Default features are disabled due to usage in no_std crates
unzip-n = "0.1.2"
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", default-features = false, features = [
  "v4",
] } # Default features are disabled due to usage in no_std crates
validated_struct = "2.1.0"
vec_map = "0.8.2"
webpki-roots = "0.26.5"
winapi = { version = "0.3.9", features = ["iphlpapi", "winerror"] }
x509-parser = "0.16.0"
z-serial = "0.2.3"
either = "1.13.0"
prost = "0.13.2"
zenoh-ext = { version = "1.0.0-dev", path = "zenoh-ext" }
zenoh-shm = { version = "1.0.0-dev", path = "commons/zenoh-shm" }
zenoh-result = { version = "1.0.0-dev", path = "commons/zenoh-result", default-features = false }
zenoh-config = { version = "1.0.0-dev", path = "commons/zenoh-config" }
zenoh-protocol = { version = "1.0.0-dev", path = "commons/zenoh-protocol", default-features = false }
zenoh-keyexpr = { version = "1.0.0-dev", path = "commons/zenoh-keyexpr", default-features = false }
zenoh-core = { version = "1.0.0-dev", path = "commons/zenoh-core" }
zenoh-buffers = { version = "1.0.0-dev", path = "commons/zenoh-buffers", default-features = false }
zenoh-util = { version = "1.0.0-dev", path = "commons/zenoh-util" }
zenoh-crypto = { version = "1.0.0-dev", path = "commons/zenoh-crypto" }
zenoh-codec = { version = "1.0.0-dev", path = "commons/zenoh-codec" }
zenoh-sync = { version = "1.0.0-dev", path = "commons/zenoh-sync" }
zenoh-collections = { version = "1.0.0-dev", path = "commons/zenoh-collections", default-features = false }
zenoh-macros = { version = "1.0.0-dev", path = "commons/zenoh-macros" }
zenoh-plugin-trait = { version = "1.0.0-dev", path = "plugins/zenoh-plugin-trait", default-features = false }
zenoh_backend_traits = { version = "1.0.0-dev", path = "plugins/zenoh-backend-traits" }
zenoh-transport = { version = "1.0.0-dev", path = "io/zenoh-transport", default-features = false }
zenoh-link-tls = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-tls" }
zenoh-link-tcp = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-tcp" }
zenoh-link-unixsock_stream = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-unixsock_stream" }
zenoh-link-quic = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-quic" }
zenoh-link-udp = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-udp" }
zenoh-link-ws = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-ws" }
zenoh-link-unixpipe = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-unixpipe" }
zenoh-link-serial = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-serial" }
zenoh-link-vsock = { version = "1.0.0-dev", path = "io/zenoh-links/zenoh-link-vsock" }
zenoh-link = { version = "1.0.0-dev", path = "io/zenoh-link" }
zenoh-link-commons = { version = "1.0.0-dev", path = "io/zenoh-link-commons" }
zenoh = { version = "1.0.0-dev", path = "zenoh", default-features = false }
zenoh-runtime = { version = "1.0.0-dev", path = "commons/zenoh-runtime" }
zenoh-task = { version = "1.0.0-dev", path = "commons/zenoh-task" }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
