#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
exclude = ["ci/nostd-check", "ci/valgrind-check"]
members = [
  "commons/zenoh-buffers",
  "commons/zenoh-codec",
  "commons/zenoh-collections",
  "commons/zenoh-config",
  "commons/zenoh-core",
  "commons/zenoh-crypto",
  "commons/zenoh-keyexpr",
  "commons/zenoh-macros",
  "commons/zenoh-pinned-deps-1-75",
  "commons/zenoh-protocol",
  "commons/zenoh-result",
  "commons/zenoh-runtime",
  "commons/zenoh-shm",
  "commons/zenoh-sync",
  "commons/zenoh-task",
  "commons/zenoh-util",
  "examples",
  "io/zenoh-link",
  "io/zenoh-link-commons",
  "io/zenoh-links/zenoh-link-quic/",
  "io/zenoh-links/zenoh-link-quic_datagram/",
  "io/zenoh-links/zenoh-link-serial",
  "io/zenoh-links/zenoh-link-tcp/",
  "io/zenoh-links/zenoh-link-tls/",
  "io/zenoh-links/zenoh-link-udp/",
  "io/zenoh-links/zenoh-link-unixpipe/",
  "io/zenoh-links/zenoh-link-unixsock_stream/",
  "io/zenoh-links/zenoh-link-vsock/",
  "io/zenoh-links/zenoh-link-ws/",
  "io/zenoh-transport",
  "plugins/zenoh-backend-example",
  "plugins/zenoh-backend-traits",
  "plugins/zenoh-plugin-example",
  "plugins/zenoh-plugin-rest",
  "plugins/zenoh-plugin-storage-manager",
  "plugins/zenoh-plugin-trait",
  "zenoh",
  "zenoh-ext",
  "zenoh-ext/examples",
  "zenohd",
]
resolver = "2"

[workspace.package]
authors = [
  "Julien Enoch <julien@enoch.fr>",
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Olivier Hécart <olivier.hecart@zettascale.tech>",
  "Pierre Avital <pierre.avital@zettascale.tech>",
  "kydos <angelo@icorsaro.net>",
]
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
rust-version = "1.75.0"
version = "1.6.0"

# DEFAULT-FEATURES NOTE: Be careful with default-features and additivity!
#                        (https://github.com/rust-lang/cargo/issues/11329)
[workspace.dependencies]
advisory-lock = "0.3.0"
aes = "0.8.4"
ahash = { version = "0.8.12", default-features = false }
anyhow = { version = "1.0.99", default-features = false } # Default features are disabled due to usage in no_std crates
arc-swap = "1.7.1"
async-executor = "1.13.3"
async-global-executor = "2.4.1"
async-io = "2.6.0"
async-std = { version = "1.13.2", features = ["tokio1"] }
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "1.3.3"
buddy_system_allocator = "=0.10.0" # Fixed at 0.10.0 to be compatible with Rust 1.75
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
console-subscriber = "0.4.0"
const_format = "0.2.34"
criterion = "0.5"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
derive-new = "0.7.0"
derive_more = { version = "1.0.0", features = ["as_ref"] }
event-listener = "5.4.1"
flume = "0.11.1"
form_urlencoded = "1.2.2"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false } # Default features are disabled due to some crates' requirements
getrandom = { version = "0.2" }
git-version = "0.3.9"
hashbrown = "0.16.0"
hex = { version = "0.4.3", default-features = false } # Default features are disabled due to usage in no_std crates
hmac = { version = "0.12.1", features = ["std"] }
home = "0.5.9"
http-types = "2.12.0"
humantime = "2.3.0"
itertools = "0.14.0"
json5 = "0.4.1"
jsonschema = { version = "0.20", default-features = false }
keyed-set = "1.1.0"
lazy_static = "1.5.0"
leb128 = "0.2"
libc = "0.2.175"
libloading = "0.8.8"
lz4_flex = "0.11.3"
nix = { version = "0.29.0", features = ["fs"] }
nonempty-collections = { version = "0.3.0", features = ["serde"] }
num-traits = { version = "0.2.19", default-features = false }
num_cpus = "1.17.0"
once_cell = "1.21.3"
ordered-float = "4.2.2"
panic-message = "0.3.0"
paste = "1.0.15"
petgraph = "0.8.2"
phf = { version = "0.13.1", features = ["macros"] }
pnet = "0.35.0"
pnet_datalink = "0.35.0"
proc-macro2 = "1.0.101"
quinn = "0.11.5"
quote = "1.0.40"
rand = { version = "0.8.5", default-features = false } # Default features are disabled due to usage in no_std crates
rand_chacha = "0.3.1"
rcgen = "0.14.4"
ref-cast = "1.0.24"
regex = "1.11.2"
ringbuffer-spsc = "0.1.15"
ron = "0.11.0"
rsa = "0.9.8"
rustc_version = "0.4.1"
rustls = { version = "0.23.31", default-features = false, features = [
  "logging",
  "ring",
  "tls12",
] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
rustls-webpki = "0.102.8"
schemars = { version = "0.8.21", features = ["either"] }
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
serde = { version = "1.0.225", default-features = false, features = [
  "derive",
] } # Default features are disabled due to usage in no_std crates
serde_json = "1.0.145"
serde_with = "3.14.0"
serde_yaml = "0.9.34"
sha3 = "0.10.8"
shellexpand = "3.1.1"
socket2 = { version = "0.5.7", features = ["all"] }
stabby = "36.1.1"
static_assertions = "1.1.0"
static_init = "1.0.3"
stop-token = "0.7.0"
syn = "2.0.106"
talc = { version = "4.4.3", default-features = false }
test-case = "3.3.1"
tide = "0.16.0"
time = "0.3.41"
token-cell = { version = "2.0.0", default-features = false }
tokio = { version = "1.47.1", default-features = false } # Default features are disabled due to some crates' requirements
tokio-rustls = { version = "0.26.2", default-features = false }
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# tokio-vsock = see: io/zenoh-links/zenoh-link-vsock/Cargo.toml (workspaces does not support platform dependent dependencies)
either = "1.15.0"
prost = "0.14.1"
thread-priority = "1.1.0"
tls-listener = { version = "0.11.0", features = ["rustls-ring"] }
typenum = "1.18.0"
uhlc = { version = "0.8.0", default-features = false } # Default features are disabled due to usage in no_std crates
unzip-n = "0.1.2"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", default-features = false, features = [
  "v4",
] } # Default features are disabled due to usage in no_std crates
validated_struct = "2.2.0"
vec_map = "0.8.2"
webpki-roots = "0.26.5"
win-sys = "0.3"
winapi = { version = "0.3.9", features = ["iphlpapi", "winerror"] }
windows-sys = { version = "0.61.0", features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
] }
x509-parser = "0.18.0"
z-serial = "0.3.1"
zenoh = { version = "=1.5.1", path = "zenoh", default-features = false }
zenoh-buffers = { version = "=1.5.1", path = "commons/zenoh-buffers", default-features = false }
zenoh-codec = { version = "=1.5.1", path = "commons/zenoh-codec" }
zenoh-collections = { version = "=1.5.1", path = "commons/zenoh-collections", default-features = false }
zenoh-config = { version = "=1.5.1", path = "commons/zenoh-config" }
zenoh-core = { version = "=1.5.1", path = "commons/zenoh-core" }
zenoh-crypto = { version = "=1.5.1", path = "commons/zenoh-crypto" }
zenoh-examples = { version = "=1.5.1", path = "examples", default-features = false }
zenoh-ext = { version = "=1.5.1", path = "zenoh-ext", default-features = false }
zenoh-keyexpr = { version = "=1.5.1", path = "commons/zenoh-keyexpr", default-features = false }
zenoh-link = { version = "=1.5.1", path = "io/zenoh-link" }
zenoh-link-commons = { version = "=1.5.1", path = "io/zenoh-link-commons" }
zenoh-link-quic = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-quic" }
zenoh-link-quic_datagram = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-quic_datagram" }
zenoh-link-serial = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-serial" }
zenoh-link-tcp = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-tcp" }
zenoh-link-tls = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-tls" }
zenoh-link-udp = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-udp" }
zenoh-link-unixpipe = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-unixpipe" }
zenoh-link-unixsock_stream = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-unixsock_stream" }
zenoh-link-vsock = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-vsock" }
zenoh-link-ws = { version = "=1.5.1", path = "io/zenoh-links/zenoh-link-ws" }
zenoh-macros = { version = "=1.5.1", path = "commons/zenoh-macros" }
zenoh-pinned-deps-1-75 = { version = "=1.5.1", path = "commons/zenoh-pinned-deps-1-75", default-features = false }
zenoh-plugin-trait = { version = "=1.5.1", path = "plugins/zenoh-plugin-trait", default-features = false }
zenoh-protocol = { version = "=1.5.1", path = "commons/zenoh-protocol", default-features = false }
zenoh-result = { version = "=1.5.1", path = "commons/zenoh-result", default-features = false }
zenoh-runtime = { version = "=1.5.1", path = "commons/zenoh-runtime" }
zenoh-shm = { version = "=1.5.1", path = "commons/zenoh-shm" }
zenoh-sync = { version = "=1.5.1", path = "commons/zenoh-sync" }
zenoh-task = { version = "=1.5.1", path = "commons/zenoh-task" }
zenoh-transport = { version = "=1.5.1", path = "io/zenoh-transport", default-features = false }
zenoh-util = { version = "=1.5.1", path = "commons/zenoh-util" }
zenoh_backend_traits = { version = "=1.5.1", path = "plugins/zenoh-backend-traits", default-features = false }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
debug = true
debug-assertions = true
inherits = "release"
lto = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
opt-level = 3
panic = "abort"
