#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#

opam-version: "2.0"
maintainer:   ["zenoh@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Olivier Hecart"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "git+https://github.com/atolab/zenoh.git"
tags:         ["zenoh"]

version: "0.4.1"
license: ["EPL-2.0" "Apache-2.0"]

build: [
["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {= "4.07.1"}
  "dune" {= "2.3.0" }
  "lwt" {= "5.1.1" }
  "apero-core" {= "0.4.7"}
  "apero-net" {= "0.4.7"}
  "zenoh-proto" {= "0.4.1"}
]
synopsis : "The zenoh router"
description: """
zenoh is a high-level and extremely wire-efficient named-data protocol
that nicely combines data streaming with distributed data quering.
This package provides the zenoh router."""

