#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#

opam-version: "2.0"
maintainer:   ["zenoh@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://zenoh.io"
bug-reports:  "https://github.com/atolab/zenoh/issues/"
dev-repo:     "git+https://github.com/atolab/zenoh.git"
tags:         ["zenoh"]
synopsis:     "The zenoh SQL backend"

version: "0.4.2-M1"
license: ["EPL-2.0" "Apache-2.0"]

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]


depends: [
  "ocaml" {= "4.07.1"}
  "dune" {= "2.3.0" }
  "caqti" {= "1.2.1" }
  "caqti-driver-sqlite3" {= "1.2.1" }
  "caqti-driver-mariadb" {= "1.2.1" }
  "caqti-driver-postgresql" {= "1.2.1" }
  "caqti-lwt" {= "1.2.0" }
  "zenoh-storages-be-lib" {= "0.4.2-M1"}
]
